--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lint": "eslint",
     "type-check": "tsc --noEmit"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
